--- a/apps/web/styles/global.scss
+++ b/apps/web/styles/global.scss
@@ -18,7 +18,7 @@ a {
 code {
   background: #fafafa;
   border-radius: 5px;
-  font-family: Menlo, Monaco, 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono',
+  font-family: Monaco, Menlo, 'Lucida Console', 'Liberation Mono', 'DejaVu Sans Mono',
     'Bitstream Vera Sans Mono', 'Courier New', monospace;
   font-size: 1.1rem;
   padding: 0.75rem;
