--- a/packages/ui/components/Button/Button.module.scss
+++ b/packages/ui/components/Button/Button.module.scss
@@ -2,6 +2,7 @@
   background-color: #0072f5;
   border: none;
   border-radius: 2rem;
+  color: white;
   cursor: pointer;
   padding: 0.75rem 1.25rem;
 
